--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -24,6 +24,7 @@
     listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
     listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
     listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    listItems.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
@@ -32,24 +33,26 @@
     searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
     searchCategories.Add(new SelectListItem { Text = "Source", Value = "Source" });
     searchCategories.Add(new SelectListItem { Text = "Stack Trace", Value = "StackTrace" });
+    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
+
 }
 
 @using (Html.BeginRouteForm("Search", new { controller = "LogException", action = "Index" }))
 {
     <div class="container" style="padding-top: 50px !important;">
-        <div class="block" style="width: 20% !important; display: inline-block;">
+        <div class="block" style="width: 25% !important; display: inline-block;">    
             @Html.Label("Sort by: ", new { @class = "mydropdown" })
             @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline-block; ">
+        <div class="block" style="width: 25% !important; display: inline-block; ">
             @Html.Label("Search by: ", new { @class = "mydropdown" })
             @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline-block; ">
+        <div class="block" style="width: 25% !important; display: inline-block; ">
             @Html.Label("*Search for: ", new { @class = "mydropdown" })
             @Html.TextBox("searchInput", null, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline-block; ">
+        <div class="block" style="width: 25% !important; display: inline-block; ">
             @Html.Label("Page: ", new { @class = "mydropdown" })
             @Html.TextBox("id", null, new { @class = "mydropdown" })
         </div>
@@ -62,26 +65,16 @@
     @Html.ActionLink(linkText: "Previous",
                         actionName: "Index",
                         controllerName: "LogException",
-                        routeValues: new
-                            {
-                                sortBy = sortBy,
-                                searchBy = searchBy,
-                                searchInput = searchInput,
-                                id = ((id - 1) != 0) ? (id - 1) : id
-                            },
+                        routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput,
+                            id = ((id - 1) != 0) ? (id - 1) : id },
                         htmlAttributes: null)
 </div>
 <div>
     @Html.ActionLink(linkText: "Next",
                         actionName: "Index",
                         controllerName: "LogException",
-                        routeValues: new
-                            {
-                                sortBy = sortBy,
-                                searchBy = searchBy,
-                                searchInput = searchInput,
-                                id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
-                            },
+                        routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput,
+                            id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
                         htmlAttributes: null)
 </div>
 
@@ -155,7 +148,6 @@ else
     <button onclick="closeModal()">Cancel</button>
 </div>
 
-
 @section scripts
 { <script language="javascript" type="text/javascript">
     var exampleModal;
@@ -170,11 +162,9 @@ else
     var currentSource = null;
     var currentStackTrace = null;
 
-
     function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, Message, MethodName, Source, StackTrace) {        
         event.preventDefault;
 
-        debugger;
         currentUserID = UserID;
         currentEmailAddress = EmailAddress;
         currentTimeStamp = TimeStamp;
@@ -216,7 +206,6 @@ else
     });
 
     function UpdateImportance() {
-        debugger;
         usernameValue = $("[name=usernameEntry]").val();
 
         var model = {
@@ -275,7 +264,7 @@ else
 
         $.ajax({
             method: "POST",
-            url: "@Url.Action("markUnimportant", "LogException")",
+            url: "@Url.Action("MarkUnimportant", "LogException")",
             dataType: "json",
             data: {
                 logToUpdate: model,
@@ -299,6 +288,5 @@ else
             }
         });
     }
-
     </script>
 }
