Making changes to LogControllerAction for Mark and Unmark as important

--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -6,7 +6,10 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 @{
     var searchBy = Model.SearchBy;
     var searchInput = Model.SearchInput;
@@ -21,34 +24,36 @@
     listItems.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
     listItems.Add(new SelectListItem { Text = "Controller Action", Value = "ControllerAction" });
     listItems.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
+    listItems.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
     searchCategories.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
     searchCategories.Add(new SelectListItem { Text = "Controller Action", Value = "ControllerAction" });
     searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
+    searchCategories.Add(new SelectListItem { Text = "Importance", Value = "Important" });
 }
 
 @using (Html.BeginRouteForm("Search", new { controller = "LogControllerAction", action = "Index" }))
 {
-    <div class="container">
-        <div class="block" style="width: 20% !important; display: inline;">
-            @Html.Label("Sort by: ")
-            @Html.DropDownList("sortBy", listItems)
+    <div class="container" style="padding-top: 50px !important;">
+        <div class="block" style="width: 25% !important; display: inline-block;">
+            @Html.Label("Sort by: ", new { @class = "mydropdown" })
+            @Html.DropDownList("sortBy", listItems, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline;">
-            @Html.Label("Search by: ")
-            @Html.DropDownList("searchBy", searchCategories)
+        <div class="block" style="width: 25% !important; display: inline-block; ">
+            @Html.Label("Search by: ", new { @class = "mydropdown" })
+            @Html.DropDownList("searchBy", searchCategories, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline;">
-            @Html.Label("Search for: ")
-            @Html.TextBox("searchInput")
+        <div class="block" style="width: 25% !important; display: inline-block; ">
+            @Html.Label("*Search for: ", new { @class = "mydropdown" })
+            @Html.TextBox("searchInput", null, new { @class = "mydropdown" })
         </div>
-        <div class="block" style="width: 20% !important; display: inline;">
-            @Html.Label("Page: ")
-            @Html.TextBox("id")
+        <div class="block" style="width: 25% !important; display: inline-block; ">
+            @Html.Label("Page: ", new { @class = "mydropdown" })
+            @Html.TextBox("id", null, new { @class = "mydropdown" })
         </div>
-            <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline;" />
+        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline-block;" />
     </div>
 }
 
@@ -56,14 +61,26 @@
     @Html.ActionLink(linkText: "Previous",
                      actionName: "Index",
                      controllerName: "LogControllerAction",
-                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
+                     routeValues: new
+                         {
+                             sortBy = sortBy,
+                             searchBy = searchBy,
+                             searchInput = searchInput,
+                         id = ((id - 1) != 0) ? (id - 1) : id
+                         },
                      htmlAttributes: null)
 </div>
 <div>
     @Html.ActionLink(linkText: "Next",
                      actionName: "Index",
                      controllerName: "LogControllerAction",
-                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
+                     routeValues: new
+                         {
+                             sortBy = sortBy,
+                             searchBy = searchBy,
+                             searchInput = searchInput,
+                         id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
+                         },
                      htmlAttributes: null)
 </div>
 
@@ -82,6 +99,8 @@
                 <td>Controller Name</td>
                 <td>Action Name</td>
                 <td>Parameters</td>
+                <td>Important</td>
+                <td>Mark as Important</td>
             </tr>
         </thead>
         <tbody>
@@ -94,6 +113,27 @@
                     <td>@currentRow.ControllerName</td>
                     <td>@currentRow.ActionName</td>
                     <td>@currentRow.Parameters</td>
+                    <td>@currentRow.Important</td>
+                    <td>
+                        @if (currentRow.Important == null) //button to mark as important
+                        {
+                            <button class="openModalButton" onclick="openModal('@currentRow.UserID.ToString()',
+                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
+                            '@currentRow.WebRequestID.ToString()', '@currentRow.ControllerName.ToString()',
+                            '@currentRow.ActionName.ToString()', '@currentRow.Parameters.ToString()')">
+                                Mark as important
+                            </button>
+                        }
+                        else //button to unmark as important
+                        {
+                            <button class="markUnimportantButton" onclick="markUnimportant('@currentRow.UserID.ToString()',
+                            '@currentRow.EmailAddress.ToString()', '@currentRow.TimeStamp.ToString()',
+                            '@currentRow.WebRequestID.ToString()', '@currentRow.ControllerName.ToString()',
+                            '@currentRow.ActionName.ToString()', '@currentRow.Parameters.ToString()')">
+                                Undo
+                            </button>
+                        }
+                    </td>
                 </tr>
             }
         </tbody>
@@ -102,4 +142,149 @@
 else
 {
     <h2> No results found. </h2>
+}
+
+<div class="reveal" id="example-modal" data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out" style="display:none;">
+    <form id="usernameForm">
+        Your Email: <input type="text" name="usernameEntry" />
+        <button onclick="UpdateImportance()">Update</button>
+    </form>
+    <button onclick="closeModal()">Cancel</button>
+</div>
+
+@section scripts
+{
+    <script language="javascript" type="text/javascript">
+    var exampleModal;
+    var exampleModalVisible = false;
+
+    var currentUserID = null;
+    var currentEmailAddress = null;
+    var currentTimeStamp = null;
+    var currentWebRequestID = null;
+    var currentControllerName = null;
+    var currentActionName = null;
+    var currentParameters = null;
+
+    function openModal(UserID, EmailAddress, TimeStamp, WebRequestID, ControllerName, ActionName, Parameters) {
+        event.preventDefault;
+
+        currentUserID = UserID;
+        currentEmailAddress = EmailAddress;
+        currentTimeStamp = TimeStamp;
+        currentWebRequestID = WebRequestID;
+        currentControllerName = ControllerName;
+        currentActionName = ActionName;
+        currentParameters = Parameters;
+
+        exampleModal.open();
+    }
+
+    function closeModal() {
+        event.preventDefault;
+
+        currentUserID = null;
+        currentEmailAddress = null;
+        currentTimeStamp = null;
+        currentWebRequestID = null;
+        currentControllerName = null;
+        currentActionName = null;
+        currentParameters = null;
+
+        exampleModal.close();
+    }
+
+    $(document).ready(function () {
+
+        exampleModal = new Foundation.Reveal($("#example-modal"));
+
+        $("#example-modal").on("open.zf.reveal", function () {
+            exampleModalVisible = true;
+        });
+
+        $("#example-modal").on("closed.zf.reveal", function () {
+            exampleModalVisible = false;
+        });
+    });
+
+    function UpdateImportance() {
+        usernameValue = $("[name=usernameEntry]").val();
+
+        var model = {
+            UserID: currentUserID,
+            EmailAddress: currentEmailAddress,
+            TimeStamp: currentTimeStamp,
+            WebRequestID: currentWebRequestID,
+            ControllerName: currentControllerName,
+            ActionName: currentActionName,
+            Parameters: currentParameters,
+        };
+
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("UpdateImportance", "LogControllerAction")",
+            dataType: "json",
+            data: {
+                username: usernameValue,
+                logToUpdate: model,
+		    },
+
+            success: function (result) {
+                document.getElementById("usernameForm").reset();
+
+                currentUserID = null;
+                currentEmailAddress = null;
+                currentTimeStamp = null;
+                currentWebRequestID = null;
+                currentControllerName = null;
+                currentActionName = null;
+                currentParameters = null;
+
+                alert(result);
+            },
+
+            error: function (result) {
+                alert(result);
+            }
+        });
+    };
+
+    function markUnimportant(currentUserID, currentEmailAddress, currentTimeStamp, currentWebRequestID, currentControllerName,
+               currentActionName, currentParameters) {
+        var model = {
+            UserID: currentUserID,
+            EmailAddress: currentEmailAddress,
+            TimeStamp: currentTimeStamp,
+            WebRequestID: currentWebRequestID,
+            ControllerName: currentControllerName,
+            ActionName: currentActionName,
+            Parameters: currentParameters,
+        };
+
+        $.ajax({
+            method: "POST",
+            url: "@Url.Action("MarkUnimportant", "LogControllerAction")",
+            dataType: "json",
+            data: {
+                logToUpdate: model,
+            },
+
+            success: function (result) {
+                currentUserID = null;
+                currentEmailAddress = null;
+                currentTimeStamp = null;
+                currentWebRequestID = null;
+                currentControllerName = null;
+                currentActionName = null;
+                currentParameters = null;
+
+                alert(result);
+            },
+
+            error: function (result) {
+                alert(result);
+            }
+        });
+    }
+    </script>
 }
